<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.HelpActivity"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_title"/>

        <TextView
            android:id="@+id/tv_helpActivity_contactUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/sp18"
            android:text="@string/contactUs"
            android:textColor="@color/color_000000"
            android:textSize="@dimen/dp15"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_4D1a1a1a"/>

        <TextView
            android:id="@+id/tv_helpActivity_aboutUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/sp18"
            android:text="@string/aboutus"
            android:textColor="@color/color_000000"
            android:textSize="@dimen/dp15" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_4D1a1a1a" />

        <TextView
            android:id="@+id/tv_helpActivity_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/sp18"
            android:text="@string/privacy_policy"
            android:textColor="@color/color_000000"
            android:textSize="@dimen/dp15" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_4D1a1a1a" />

        <TextView
            android:id="@+id/tv_helpActivity_termsOfService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/sp18"
            android:text="@string/terms_condition"
            android:textColor="@color/color_000000"
            android:textSize="@dimen/dp15" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_4D1a1a1a" />

    </LinearLayout>
</layout>